--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -3,4 +3,20 @@
     margin: 0;
     box-sizing: border-box;
     font-size: 100%;
+    font-size: 100;
+}
+
+a {
+    color: $black;
+    text-decoration: none;
+    position: relative;
+    &:after {
+        content: '';
+        height: 1px;
+        width: 100%;
+        position: absolute;
+        left: 0;
+        bottom: 2px;
+        background: rgba($black, .5)
+    }
 }
