redesign landing page

--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -3,13 +3,11 @@
     margin-bottom: 4rem;
     @include bp(m){
         grid-template-columns: 1fr 1fr;
-        grid-column-gap: 3%;
     }
 }
 .menu-item {
-    padding: .5rem 0;
+    padding: .5rem;
     font-size: 1.2rem;
-    border-bottom: 1px solid rgba($black, .4);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
