--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,10 +1,39 @@
-
 .home-images {
     padding: 1rem;
+    height: 100vh;
+    display: flex;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    justify-content: center;
+    align-items: center;
     img {
         z-index: -100;
+        position: absolute;
+        height: auto;
+    }
+}
+
+.home-title {
+    font-size: 8vw;
+    line-height: .8;
+    flex-basis: 50%;
+    color: white;
+    text-align: center;
+    span {
         display: block;
-        position: relative;
-        max-width: 100%;
+    }
+}
+
+.home-info {
+    flex-basis: 50%;
+    font-size: 1.1rem;
+    padding-left: 10%;
+    text-align: left;
+    p {
+        margin-bottom: .5rem;
+    }
+    span {
+        display: block;
     }
 }
