redesgin landing page

--- a/sass/_bits.scss
+++ b/sass/_bits.scss
@@ -4,7 +4,7 @@
 }
 
 $larish: Larish, Georgia, 'Times New Roman', serif;
-$pink: #FFC6B6;
+$pink: #FFD4CC;
 $black: rgb(32,30,35);
 
 @mixin bp($point) {
