--- a/templates/page-home.twig
+++ b/templates/page-home.twig
@@ -1,13 +1,9 @@
 {% extends "base.twig" %}
 {% block content %}
-    <div class="home-images">
+    <div class="home-images" id='js-imageContainer'>
       <h1 class='home-title'>
       <span>Aside</span>
-      <span>A Place to Gather</span>
       </h1>
-      <img src="{{ theme.link }}/assets/source/wall-2.jpg" alt="test">
-      <img src="{{ theme.link }}/assets/source/SIP-4817.jpg" alt="test">
-      <img src="{{ theme.link }}/assets/source/SIP-4806.jpg" alt="test">
       <div class='home-info'>
       <p>
         <span>49 Staffordshire Street</span>
