--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   src: url("./fonts/larish_neue.otf") format("opentype"); }
 
 body {
-  background: #e1e1e1;
+  background: #D7DBE0;
   font-family: Larish, Georgia, "Times New Roman", serif; }
 
 .site-header {
@@ -46,6 +46,7 @@ body {
   overflow: hidden;
   position: relative;
   justify-content: center;
+  flex-wrap: wrap;
   align-items: center; }
   .home-images img {
     z-index: -100;
@@ -53,18 +54,18 @@ body {
     height: auto; }
 
 .home-title {
-  font-size: 8vw;
+  font-size: 25vw;
   line-height: .8;
-  flex-basis: 50%;
+  flex-basis: 100%;
   color: white;
   text-align: center; }
   .home-title span {
     display: block; }
 
 .home-info {
-  flex-basis: 50%;
+  flex-basis: 100%;
   font-size: 1.1rem;
-  padding-left: 10%;
+  padding-left: 5%;
   text-align: left; }
   .home-info p {
     margin-bottom: .5rem; }
