Update landing page

--- a/templates/page-home.twig
+++ b/templates/page-home.twig
@@ -1,20 +1,20 @@
 {% extends "base.twig" %}
 {% block content %}
-    <div class="home-images" id='js-imageContainer'>
+    <div class="home-background" id='js-imageContainer'>
+    </div>
       <h1 class='home-title'>
       <span>Aside</span>
       </h1>
       <div class='home-info'>
       <p>
-        <span>49 Staffordshire Street</span>
-        <span>London SE15 5TJ</span>
+        <span>56 Goldsmith Rd</span>
+        <span>London SE15 5TF</span>
         </p>
         <p class='contact'>
-        <span><a href="http://www.instagram.com/asidelondon">@asidelondon</a></span>
-        <span>hello@asidelondon.com</span>
-        <span>44 1542 373839</span>
+        <span>Reservations</span>
+        <span><a href="mailto:hello@asidelondon.com">hello@asidelondon.com</a></span>
+        <span>0207 358 1760</span>
         </p>
-    </div>
     </div>
     <script>
     {% include "./js/arrange-images.js" %}
