--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,23 +1,17 @@
-.home-images {
-    padding: 1rem;
-    height: 100vh;
-    display: flex;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    img {
-        z-index: -100;
-        position: absolute;
-        height: auto;
-    }
+.home-background {
+    position: absolute;
+    left: 3vw;
+    right: 3vw;
+    top: 3vw;
+    height: 40vh;
+    background-size: cover;
+    z-index: -100;
 }
 
 .home-title {
     font-size: 25vw;
     line-height: .8;
+    padding-top: 35vh;
     flex-basis: 100%;
     color: white;
     text-align: center;
@@ -27,12 +21,13 @@
 }
 
 .home-info {
-    flex-basis: 100%;
     font-size: 1.1rem;
     padding-left: 5%;
     text-align: left;
+    position: absolute;
+    bottom: 5%;
     p {
-        margin-bottom: .5rem;
+        margin-top: .5rem;
     }
     span {
         display: block;
