--- a/style.css
+++ b/style.css
@@ -40,12 +40,17 @@ body {
 
 .home-background {
   position: absolute;
-  left: 3vw;
-  right: 3vw;
-  top: 3vw;
+  left: 1rem;
+  right: 1rem;
+  top: 1rem;
   height: 40vh;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: contain;
   z-index: -100; }
+  @media (min-width: 45rem) {
+    .home-background {
+      height: 80vh; } }
 
 .home-title {
   font-size: 25vw;
@@ -56,6 +61,10 @@ body {
   text-align: center; }
   .home-title span {
     display: block; }
+  @media (min-width: 45rem) {
+    .home-title {
+      padding-top: 25vh;
+      font-size: 18vw; } }
 
 .home-info {
   font-size: 1.1rem;
