--- a/templates/page-home.twig
+++ b/templates/page-home.twig
@@ -1,6 +1,7 @@
 {% extends "base.twig" %}
 {% block content %}
-    <div class="home-background" id='js-imageContainer'>
+{% set images = ['SIP-4728.jpg', 'marble.jpg', 'h.jpg', 'SIP-4731.jpg', 'SIP-4738.jpg', 'SIP-4740.jpg', 'SIP-4746.jpg', 'SIP-4814.jpg', 'SIP-4817.jpg']%}
+    <div class="home-background" id='js-imageContainer' style='background-image: url({{ theme.link }}/assets/dist/{{random(images)}})'>
     </div>
       <h1 class='home-title'>
       <span>Aside</span>
@@ -17,6 +18,5 @@
         </p>
     </div>
     <script>
-    {% include "./js/arrange-images.js" %}
     </script>
 {% endblock %}
