--- a/templates/page-home.twig
+++ b/templates/page-home.twig
@@ -1,20 +1,38 @@
 {% extends "base.twig" %}
 {% block content %}
-    <div class="home-background" id='js-imageContainer'>
+<script type="text/javascript" src="https://www.simpleerb.com/8724/aside/init/"></script>
+
+    <div class="home-hero" id='js-imageContainer'>
+      <h1 class='home-title'>Aside</h1>
     </div>
-      <h1 class='home-title'>
-      <span>Aside</span>
-      </h1>
       <div class='home-info'>
-      <p>
-        <span>56 Goldsmith Rd</span>
-        <span>London SE15 5TF</span>
-        </p>
-        <p class='contact'>
-        <span>Reservations</span>
-        <span><a href="mailto:hello@asidelondon.com">hello@asidelondon.com</a></span>
-        <span>0207 358 1760</span>
-        </p>
+      <section>
+<h2>Opening Times</h2>
+<p>
+<span>Wednesday—Friday: 10.00—23.00</span>
+<span>Saturday: 09.00—23.00</span>
+<span>Sunday: 09.00—18.00</span>
+<span>Please note the kitchen closes from 15.00—18.00 every day.</span> 
+</p>
+
+<p>To make your reservation, please either do so below, call us on <em>0207 358 1760</em> or email <a href="mailto:hello@asidelondon.com">hello@asidelondon.com</a></p>
+
+<a href="https://www.simpleerb.com/8724/aside/" class="serbwidget" target="_blank" >Book a Table</a>
+</section>
+<section>
+<h2>Contact</h2>
+<p>
+<span>Aside</span>
+<span>56 Goldsmith Road</span>
+<span>London SE15</span>
+<span><a href="https://www.google.co.uk/maps/place/56+Goldsmith+Rd,+London+SE15+5TF/@51.4761319,-0.0670891,15.91z/data=!4m5!3m4!1s0x4876030bccb132c3:0xb4bc900fbbc0221c!8m2!3d51.4755717!4d-0.0657666">View Map</a>
+</p>
+<p>
+<a href="mailto:hello@asidelondon.com">hello@asidelondon.com</a></span>
+<span>0207 358 1760</span>
+</p>
+</section>
+
     </div>
     <script>
     {% include "./js/arrange-images.js" %}
