--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   src: url("./fonts/larish_neue.otf") format("opentype"); }
 
 body {
-  background: whitesmoke;
+  background: #e7e7e7;
   font-family: Larish, Georgia, "Times New Roman", serif; }
 
 .site-header {
@@ -41,27 +41,32 @@ body {
 .home-hero {
   height: 40vh;
   background-repeat: no-repeat;
-  background-position: top 1rem center;
-  background-size: 90%;
-  margin-bottom: 1rem;
+  background-position: center;
+  background-size: contain;
+  margin-bottom: 2rem;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  background-clip: padding-box;
+  border: 1rem solid #e7e7e7;
+  position: relative; }
   @media (min-width: 35rem) {
     .home-hero {
-      background-size: contain;
       height: 60vh; } }
   @media (min-width: 45rem) {
     .home-hero {
       margin-bottom: 3rem;
-      margin-top: 2rem;
       height: 80vh; } }
 
 .home-title {
   font-size: 25vw;
-  padding-left: 5%;
   color: white;
-  text-align: center; }
+  text-align: center;
+  position: absolute;
+  bottom: -.5em; }
+  @media (min-width: 35rem) {
+    .home-title {
+      position: static; } }
   @media (min-width: 45rem) {
     .home-title {
       font-size: 18vw; } }
