--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -24,7 +24,9 @@
     color: white;
     text-align: center;
     position: absolute;
+    width: 100%;
     bottom: -.5em;
+    left : 0;
     @include bp(s){
         position: static;
     }
