--- a/style.css
+++ b/style.css
@@ -63,7 +63,9 @@ body {
   color: white;
   text-align: center;
   position: absolute;
-  bottom: -.5em; }
+  width: 100%;
+  bottom: -.5em;
+  left: 0; }
   @media (min-width: 35rem) {
     .home-title {
       position: static; } }
