--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -4,9 +4,6 @@
     background-position: center;
     background-size: contain;
     margin-bottom: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background-clip: padding-box;
     border: 1rem solid $lightgray;
     position: relative;
@@ -23,15 +20,15 @@
     font-size: 25vw;
     color: white;
     text-align: center;
-    position: absolute;
+    position: relative;
     width: 100%;
-    bottom: -.5em;
-    left : 0;
-    @include bp(s){
-        position: static;
-    }
+    top: 50%;
+    transform: translateY(-50%);
     @include bp(m){
         font-size: 18vw;
+    }
+    @include bp(m){
+        font-size: 12vw;
     }
 }
 
