--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ body {
   background-position: center;
   background-size: contain;
   margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-clip: padding-box;
   border: 1rem solid #e7e7e7;
   position: relative; }
@@ -59,16 +62,14 @@ body {
   font-size: 25vw;
   color: white;
   text-align: center;
-  position: relative;
-  width: 100%;
-  top: 50%;
-  transform: translateY(-50%); }
+  position: absolute;
+  bottom: -.5em; }
+  @media (min-width: 35rem) {
+    .home-title {
+      position: static; } }
   @media (min-width: 45rem) {
     .home-title {
       font-size: 18vw; } }
-  @media (min-width: 45rem) {
-    .home-title {
-      font-size: 12vw; } }
 
 .home-info {
   font-size: 1.05rem;
