--- a/templates/page-home.twig
+++ b/templates/page-home.twig
@@ -15,7 +15,7 @@
 <span>Please note the kitchen closes from 15.00—18.00 every day.</span> 
 </p>
 
-<p>To make your reservation, please either do so below, call us on <em>0207 358 1760</em> or email <a href="mailto:hello@asidelondon.com">hello@asidelondon.com</a></p>
+<p>To make your reservation, please either do so below, call us on <em>0207 358 1760</em> or email <a href="mailto:bookings@asidelondon.com">bookings@asidelondon.com</a></p>
 
 <a href="https://www.simpleerb.com/8724/aside/" class="serbwidget" target="_blank" >Book a Table</a>
 </section>
